--- a/index.html
+++ b/index.html
@@ -4,52 +4,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyek1 STr HTML 27 02 2024</title>
+    <title>Profil Muhammad Rafli Fadhilah</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Srisakdi&display=swap" rel="stylesheet">
-
+    <link rel="icon" href="img/RF_new_logo-removebg-preview.png" type="image/jpg">
 </head>
 
 <body>
     <header>
-
         <nav>
             <div class="logo">
-                <h4>Rizqi Proyek 1</h4>
+                <h4>Rafli Fadhilah</h4>
             </div>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Subjects</a></li>
-                <li><a href="#">Files</a></li>
-                <li><a href="#">Assignment</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="https://www.linkedin.com/in/muhammad-rafli-fadhilah-07a1b7283/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.instagram.com/rafli_fdhlh/" target="_blank">Instagram</a></li>
+                <li><a href="https://drive.google.com/drive/folders/1YeQQQbNRtpocfAlJpKAJuQv9GgRApMhk?usp=drive_link" target="_blank">My ArtWork</a></li>
+                <li><a href="https://www.subaruindonesia.com/id/subaru-brz-overview">My Dream Car</a></li>
             </ul>
             <div class="menu-toggle">
                 <input type="checkbox">
                 <span></span>
                 <span></span>
-                <span></span>   
+                <span></span>
             </div>
         </nav>
     </header>
     <div class="container">
-    <main>
-        <div class="box flextwo">
-            <article>
-                <h2>Tentang Web</h2>
-                <p>Web Ini dibuat untuk memenuhi tugas Proyek 1. Beberapa sumber yang dipakai dalam pengerjaan tugas ini selain dari lms  adalah dari ... Terima Kasih</p>
-            </article>
-        </div>
-        <aside class="box flexone">
-            <img src="img/RIZQI.png" class="image"/>
-            <h5>Muhammad Rizqi Sholahuddin</h5>
-        </aside>
-    </main>
-    <footer class="box">
-        Rizqi, Di depan Laptop 27 Februari 2024
-    </footer>
+        <main>
+            <div class="box flextwo">
+                <div class="animated-element">
+                    <article>
+                        <h1>Profil Pribadi</h1>
+                    </article>
+                </div>
+            </div>
+            <aside class="box flexone">
+                <img src="img/RAFLI.png" class="image" alt="Muhammad Rafli Fadhilah">
+                <br>
+                <h2 class="nama">Muhammad Rafli Fadhilah</h2>
+                <br>
+                <div class="profile-box">
+                    <h3>Motto Pribadi</h3>
+                    <div class="content-box">
+                        <p><i><q>Jalanin Aja Dulu</q></i></p>
+                    </div>
+                </div>
+                <div class="profile-box">
+                    <h3>Hobi</h3>
+                    <div class="content-box">
+                        <p>Bermain futsal, mendesain dan mengedit (logo, video, foto, poster), dan menonton film</p>
+                    </div>
+                </div>
+                <div class="profile-box">
+                    <h3>Kemampuan Teknis</h3>
+                    <div class="content-box">
+                        <p>Mengerti bahasa pemrograman (Java, C, C++), menguasai <i>software</i> pengolah data (MS Word, MS Excel, MS PowerPoint)</p>
+                    </div>
+                </div>
+                <div class="profile-box">
+                    <h3>Lesson Learned</h3>
+                    <div class="content-box">
+                        <p>Saya mengetahui bahwa tidak mudah untuk mengubah website dalam waktu kurang dari sehari tanpa dasar yang dipunyai.</p>
+                        <p>Karenanya kita harus bekerja secara efisien walaupun tidak maksimal dikarenakan waktu yang sedikit. Sehingga kita </p>
+                        <p>harus bisa memaksimalkannya. Saya juga diingatkan kembali bahwa kontainer bisa digunakan sebagai "bentuk" dari websitenya.</p>
+                    </div>
+                </div>
+                <div class="profile-box">
+                    <h3>Harapan Saya</h3>
+                    <div class="content-box">
+                        <p>Harapan saya adalah semoga saya dan teman-teman saya sukses dikemudian hari di bidangnya masing-masing.</p>
+                    </div>
+                </div>
+                <div class="profile-box">
+                    <h3>Lokasi Kampus Saya</h3>
+                    <div class="content-box">
+                        <iframe class="frame-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.1534713934707!2d107.57377249999999!3d-6.8722074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e420abc30acf%3A0x10569255865460a5!2sPoliteknik%20Negeri%20Bandung!5e0!3m2!1sen!2sid!4v1709047264434!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="profile-box">
+                    <h3>My Edit</h3>
+                    <div class="content-box">
+                        <video class="frame-map" width="600" height="400" controls>
+                            <source src="video/Cinematic Rocket League Portal.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <div class="profile-box">
+                    <h3>My Gallery (Volunteer)</h3>
+                    <div class="content-box gallery-box">
+                        <img src="img/Ruang Dialektika.png" alt="Image 1">
+                    </div>
+                </div>
+            </aside>
+        </main>
+        <footer class="box">
+            © Muhammad Rafli Fadhilah | Politeknik Negeri Bandung 2024
+        </footer>
     </div>
-</div>
     <script src="js/main.js"></script>
 </body>
 
